styles/globals.css
/* stylelint-disable number-leading-zero */
/* stylelint-disable value-keyword-case */
/* stylelint-disable function-no-unknown */
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
}

* {
  box-sizing: border-box;
}

@layer components {
}

@layer base {
  html {
    font-family: Fellix, sans-serif;
    font-weight: 500;
  }
}

@layer utilities {
  .ctagradient {
    background-color: hsla(0, 0%, 100%, 1);
    background-image: radial-gradient(
        at 100% 0%,
        hsla(32, 98%, 83%, 0.4) 0px,
        transparent 50%
      ),
      radial-gradient(at 40% 1%, hsla(32, 98%, 83%, 0.2) 0px, transparent 50%),
      radial-gradient(at 70% 60%, hsla(152, 75%, 80%, 0.3) 0px, transparent 50%),
      radial-gradient(at 0% 1%, hsla(152, 75%, 80%, 0.4) 0px, transparent 50%),
      radial-gradient(at 30% 40%, hsla(32, 98%, 83%, 0.3) 0px, transparent 30%);
  }
}

